# Various-python-scrapers

./: .gitignore  .pdm-python  README.md  pyproject.toml
4chan/: 4chan.py  README.MD
MagPi/: README.MD  from sqlalchemy.orm import Session  magpi.py
NAEA/: README.md  naea.py  naea.sqlite  naea_s.py
RICS/: README.md  rics.py  rics.sqlite  rics_geo.py  surveyor_geo.sqlite
Spa/: README.md  spa.py  spa_data.csv  spa_data.sqlite
advokatnoeglen/: Advokater.csv  README.md  advocates.py
byte/: README.MD  byte_magazines_collection.py
cat/: README.md  cat.py  cat.sqlite
filfre/: README.md  correct_images.py  filfre_articles_m.py  image_count.pickle
harvardclassics/: README.MD  harvardclassics.py
houseprices/: Property sales 2016 final.xlsx  Property sales 2016 final.xlsx.gsheet  Property sales 2016 wrk.xlsx  README.md  duplicates.txt  hp.csv  hp.py  hp.sqlite
ikea_catalogues/: README.MD  ikea_catalogues.py
parl/: MPs_UK_with_email.xlsx  README.md  parl.csv  parl.py
vape/: README.md  cities.csv  vape raw.xls  vape.csv  vape.py  vape.xls
vivino/: best-vines.py
whoishiring/: .gitignore  README.MD  may-2018.html  style.css  template.html  who-is-hiring-may-2018.json  whoishiring may 2018.html  whoishiring may 2018.json  whoishiring.py  whoishiring.sqlite
woodworks/: README.MD  woodworks.py
