[project]
name = "Various-python-scrapers"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Alexey Yurko", email = "a.yurko@gmail.com"},
]
dependencies = ["requests>=2.32.3", "bs4>=0.0.2", "tqdm>=4.67.1", "lxml>=5.3.0", "httpx>=0.28.0", "aiofiles>=24.1.0", "isort>=5.13.2", "ruff>=0.8.1", "fake-useragent>=1.5.1"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
